# simple-extension-analyser

./: .gitignore  NOTES.md  README.md  TODO.md
.github/workflows/: github-pages-deployment.yaml
analyser/: Cargo.toml
analyser/src/: lib.rs
webapp/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: app.tsx  main.tsx  routeTree.gen.ts
webapp/src/app/: App.tsx  app.tsx  layout.tsx  navbar.tsx  router.tsx
webapp/src/app/layout/: nav-button.tsx
webapp/src/app/routes/: Extension.tsx  Home.tsx  Layout.tsx  extension.tsx  home.tsx  layout.tsx  not-found.tsx  settings.tsx
webapp/src/components/: button.tsx  card.tsx  code.tsx  icon.tsx  loading.tsx  placeholder-text.tsx  router-link.tsx  table.tsx  tabs.tsx
webapp/src/components/forms/: form-group.tsx  input-drop.tsx  input.tsx
webapp/src/components/routes/: error.tsx  not-found.tsx
webapp/src/components/ui/: button-icon.tsx  button.tsx  card.tsx  code.tsx  form.tsx  icon.tsx  index.ts  loading.tsx  modal.tsx  router-link.tsx  select.tsx  spinner.tsx  table.tsx  tabs.tsx
webapp/src/features/ai/: index.ts
webapp/src/features/analyser/: index.ts
webapp/src/features/extension/: index.ts
webapp/src/features/toasts/: README.md  index.ts
webapp/src/lib/: i18n.ts  lowlight.ts  mersenne-twister.ts
webapp/src/locales/: en-GB.json  ro-RO.json
webapp/src/routes/: __root.tsx  index.tsx
webapp/src/stores/: extensions.ts  index.ts  store.ts
webapp/src/styles/: code.css  code.scss  main.css
webapp/src/utils/: icons.ts  index.ts  json.ts
(+94 files in other folders)
