[package]
name = "analyser"
version = "0.0.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.11.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
md5 = "0.7.0"
wasm-bindgen = "0.2.100"

[dependencies.zip]
version = "3.0.0"
default-features = false
features = ["deflate"]

[profile.release]
opt-level = "z"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
